--- a/ProyectoMeto/build.xml
+++ b/ProyectoMeto/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ProyectoMeto" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ProyectoMeto.</description>
+<project name="Casa_de_Reposo" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Casa_de_Reposo.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="ProyectoMeto-impl.jar">
+        <target name="run" depends="Casa_de_Reposo-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
