--- a/ProyectoMeto/nbproject/private/private.properties
+++ b/ProyectoMeto/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-5.1.6-bin.jar=C:\\Users\\carlos\\Desktop\\version\\mysql-connector-java-5.1.6-bin.jar
 user.properties.file=C:\\Users\\carlos\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
